fix header not fitting in orders

--- a/page/order/order.css
+++ b/page/order/order.css
@@ -119,7 +119,6 @@ html {
 }
 
 .cart-item h3{
-  font-size: 30px;
   margin: 4px;
   width: 10rem;
   font-weight: normal;
@@ -193,4 +192,9 @@ html {
 
 .toolTip:hover .toolTipText {
   visibility: visible;
+}
+
+#infoDiv {
+  display: flex;
+  align-items: center;
 }
